added ctor model schema api
