# src/models.py
@@ -35,3 +35,14 @@ class Film(db.Model):
             'length': self.length,
             'rating': self.rating,
         }
+
+class Actor(db.Model):
+    __tablename__ = 'actors'
+
+    id = db.Column(db.Integer, primary_key=True)
+    name = db.Column(db.String(50), unique=True, nullable=False)
+    birthday = db.Column(db.Date, index=True, nullable=False)
+    is_active = db.Column(db.Boolean, default=False)
+
+    def __repr__(self):
+        return f'Actor({self.name}, {self.birthday})'
